prepare support for more push services like APN and Firebase, add Configuration app for app settings
