# foss_public_alert_server/subscriptionHandler/push_notification_services/firebase.py
@@ -1,0 +1,21 @@
+# SPDX-FileCopyrightText: Nucleus <nucleus-ffm@posteo.de>
+# SPDX-License-Identifier: AGPL-3.0-or-later
+from django.http import HttpResponseBadRequest
+
+
+def send_notification(token,payload):
+    """
+     # @TODO: Implement
+    :param token:
+    :param payload:
+    :return:
+    """
+    raise Exception("Not implemented yet")
+
+def update_subscription(data):
+    """
+    # @TODO: Implement
+    :param data:
+    :return:
+    """
+    return HttpResponseBadRequest("Not implemented yet")
